Fix visible delay when applying custom class to searchable select panel

--- a/desktop/src/app/components/widgets/searchable-select.scss
+++ b/desktop/src/app/components/widgets/searchable-select.scss
@@ -44,6 +44,11 @@
   transition: border-color 0.15s ease-in-out;
   overflow-x: hidden;
   z-index: 2000 !important;
+  opacity: 0 !important;
+
+  &.panel-initialized {
+    opacity: 1 !important;
+  }
 
   &.ng-select-top {
     margin-bottom: 0 !important;
